# minimal.rs

./: Cargo.toml  minimal.rs
